fix(controller): add bulk record operations
